--- a/thank_you.html
+++ b/thank_you.html
@@ -12,12 +12,13 @@
             <img src="/images/illustration-thank-you.svg" alt="thankyou">
         </div>
         <main id="main2">
-            <p>You selected  out of 5</p>
+            <div>You selected <span id="rate"></span> out of 5</div>
             <h1>Thank you!</h1>
             <p>We appreciate you taking the time to give a rating. If you ever need more support, 
                 don’t hesitate to get in touch!
             </p>
         </main>
-    </div>    
+    </div>
+    <script src="script.js"></script>    
 </body>
 </html>
