--- a/index.html
+++ b/index.html
@@ -9,30 +9,54 @@
       sizes="32x32"
       href="favicon-32x32.png"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/styles.css"/>
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
+
   <body>
-    <div id="feedback-container">
-      <div id="star">
-        <img src="icon-star.svg" alt="star" />
-      </div>
-      <main>
-        <h2>How did we do?</h2>
-        <p>
-          Please let us know how we did with your support request. All feedback
-          is appreciated to help us improve our offering!
-        </p>
-        <button type="submit" class="rating" id="rating1" onclick="selectRating(1)">1</button>
-        <button type="submit" class="rating" id="rating2" onclick="selectRating(2)">2</button>
-        <button type="submit" class="rating" id="rating3" onclick="selectRating(3)">3</button>
-        <button type="submit" class="rating" id="rating4" onclick="selectRating(4)">4</button>
-        <button type="submit" class="rating" id="rating5" onclick="selectRating(5)">5</button>
-      </main>
-      <footer>
-        <button type="submit" onclick="submitRating()">Submit</button>
-      </footer>
-    </div>
+    <main id="feedback-container">
+      <!-- Rating state start -->
+      <section id="rating-section">
+        <div id="star">
+          <img src="icon-star.svg" alt="Icon Star" />
+        </div>
+        <div id="div-1">
+          <h1>How did we do?</h1>
+          <p>
+            Please let us know how we did with your support request. All
+            feedback is appreciated to help us improve our offering!
+          </p>
+        </div>
+        <div id="div-2">
+          <button type="submit" id="rating1" class="rating" onclick="selectRating(1)">1</button>
+          <button type="submit" id="rating2" class="rating" onclick="selectRating(2)">2</button>
+          <button type="submit" id="rating3" class="rating" onclick="selectRating(3)">3</button>
+          <button type="submit" id="rating4" class="rating" onclick="selectRating(4)">4</button>
+          <button type="submit" id="rating5" class="rating" onclick="selectRating(5)">5</button>
+        </div>
+        <button type="submit" id="submit-btn" onclick="submitRating()">Submit</button>
+      </section>
+      <!-- Rating state end -->
+
+      <!-- Thank you state start -->
+      <section id="thank-you-section">
+        <div id="thankyou-image">
+          <img src="illustration-thank-you.svg" alt="Thank You Illustration"/>
+        </div>
+        <div id="div-3">
+          <p id="selects"></p>
+        </div>
+        <div id="div-4">
+          <h2>Thank you!</h2>
+          <p>
+            We appreciate you taking the time to give a rating. If you ever need
+            more support, don’t hesitate to get in touch!
+          </p>
+        </div>
+      </section>
+      <!-- Thank you state end -->
+    </main>
+    <!-- Custom JS -->
     <script src="script.js"></script>
   </body>
 </html>
