--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="32x32"
       href="favicon-32x32.png"
     />
-    <link rel="stylesheet" href="/styles.css"/>
+    <link rel="stylesheet" href="styles.css"/>
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
 
